fixed some spacing

--- a/styles/components/_overview.scss
+++ b/styles/components/_overview.scss
@@ -8,12 +8,12 @@
         flex-flow:row;
         align-items: center;
         justify-content: space-between;
-        padding: 1.5rem;
+        padding: 1rem;
         border-radius: 0.3rem;
-        min-width: 250px;
+        min-width: 300px;
         
         &__container {
-            padding: 1.5rem;
+            padding: 1rem;
             display: flex;
             flex-grow: 1;
             justify-content: center;
