--- a/styles/components/_social-media.scss
+++ b/styles/components/_social-media.scss
@@ -89,7 +89,7 @@
 
         &__container {
             flex-grow: 1;
-            padding: 1.5rem;
+            padding: 1rem;
             display: flex;
             justify-content: center;
             align-items: center;
