--- a/styles/main.css
+++ b/styles/main.css
@@ -173,7 +173,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 2rem 1.5rem;
+  padding: 2rem 1rem;
 }
 
 @media (max-width: 500px) {
@@ -387,7 +387,7 @@
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  padding: 1.5rem;
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -453,13 +453,13 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5rem;
+  padding: 1rem;
   border-radius: 0.3rem;
-  min-width: 250px;
+  min-width: 300px;
 }
 
 .overview__card__container {
-  padding: 1.5rem;
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
